# youbot_simulation

./: README.md
youbot_description/: CMakeLists.txt  package.xml
youbot_description/controller/: arm_joint_universal_control.yaml  perfect_odometry.yaml
youbot_description/include/: youbot_universal_control.h
youbot_description/launch/: xacroload.launch  youbot_arm_publisher.launch  youbot_arm_publisher_no_x.launch  youbot_base_publisher.launch  youbot_base_publisher_no_x.launch  youbot_publisher.launch  youbot_publisher_no_x.launch  youbot_simulation.launch  youbot_with_cam.launch  youbot_with_cam_description.launch  youbot_with_stereo_cam.launch  youbot_with_stereo_cam_description.launch
youbot_description/launch/control/: youbot_base_control.launch
youbot_description/robots/: youbot-sensors.urdf.xacro  youbot.urdf.xacro  youbot_arm.urdf.xacro  youbot_base.urdf.xacro  youbot_dual_arm.urdf.xacro  youbot_gripper.urdf.xacro  youbot_with_cam.urdf.xacro  youbot_with_stereo_cam.urdf.xacro
youbot_description/src/: joint_position_control.cpp  youbot_universal_control.cpp
youbot_description/urdf/environment/: robocup_at_work.urdf  tower_of_hanoi.urdf  wall.urdf
youbot_description/urdf/misc/: cam3d_tower.urdf.xacro  sensor_angle.urdf.xacro
youbot_description/urdf/sensors/: asus_xtion_camera.gazebo.xacro  asus_xtion_camera.urdf.xacro  hokuyo_urg04_laser.gazebo.xacro  hokuyo_urg04_laser.urdf.xacro  kinect_camera.gazebo.xacro  kinect_camera.urdf.xacro  microsoft_lifecam.gazebo.xacro  microsoft_lifecam.urdf.xacro
youbot_description/urdf/youbot_arm/: arm.transmission.xacro  arm.urdf.xacro  arm_with_cam.gazebo.xacro  arm_with_cam.urdf.xacro  arm_with_stereo_cam.gazebo.xacro  arm_with_stereo_cam.urdf.xacro
youbot_description/urdf/youbot_base/: base.gazebo.xacro  base.transmission.xacro  base.urdf.xacro
youbot_description/urdf/youbot_gripper/: gripper.transmission.xacro  gripper.urdf.xacro
youbot_description/urdf/youbot_plate/: plate.urdf.xacro
youbot_trajectory_action_server/: CMakeLists.txt  package.xml
youbot_trajectory_action_server/include/youbot_trajectory_action_server/: joint_trajectory_action.h
youbot_trajectory_action_server/src/: joint_trajectory_action.cpp
