<?xml version="1.0"?>
<package>
  <name>youbot_description</name>
  <description>Catkinized and ros indigo/gazebo-4 updated version of youbot_description</description>
  
  <version>0.0.0</version>
  
  <maintainer email="stewess@todo.todo">Stefan Isler</maintainer>
  <author>Alexey Zakharov, Sebastian Blumenthal, Stefan Isler</author>
  <license>LGPL, BSD</license>
  
  <url>https://github.com/stewess/youbot_common/youbot_description</url>
  
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend >robot_state_publisher</build_depend>
  <build_depend >urdf</build_depend>
  <build_depend >trajectory_msgs</build_depend>
  <build_depend >brics_actuator</build_depend>
  <build_depend >nav_msgs</build_depend>
  <build_depend >pr2_controller_interface</build_depend>
  <build_depend >control_toolbox</build_depend>
  <build_depend >pr2_controllers_msgs</build_depend>
  <build_depend >realtime_tools</build_depend>
  <build_depend >orocos_kdl</build_depend>
  <build_depend >sensor_msgs</build_depend>
  <build_depend >control_msgs</build_depend>
  <build_depend >actionlib</build_depend>
  <build_depend >youbot_trajectory_action_server</build_depend>
  <build_depend >pr2_gazebo_plugins</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend >robot_state_publisher</run_depend>
  <run_depend >urdf</run_depend>
  <run_depend >trajectory_msgs</run_depend>
  <run_depend > brics_actuator</run_depend>
  <run_depend >nav_msgs</run_depend>
  <run_depend >pr2_controller_interface</run_depend>
  <run_depend >control_toolbox</run_depend>
  <run_depend >pr2_controllers_msgs</run_depend>
  <run_depend >realtime_tools</run_depend>
  <run_depend >orocos_kdl</run_depend>
  <run_depend >sensor_msgs</run_depend>
  <run_depend >control_msgs</run_depend>
  <run_depend >actionlib</run_depend>
  <run_depend >youbot_trajectory_action_server</run_depend>
  <run_depend >pr2_gazebo_plugins</run_depend>


  <export>
    <pr2_controller_interface plugin="${prefix}/controller_plugins.xml" />
     <cpp cflags="-I${prefix}/include" />
  </export>

</package>


